--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,37 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"powerpay-5c964","appId":"1:224888229405:android:964ba477f4e8fbf29bc0f4","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"powerpay-5c964","configurations":{"android":"1:224888229405:android:964ba477f4e8fbf29bc0f4"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "powerpay-5c964",
+          "appId": "1:224888229405:android:964ba477f4e8fbf29bc0f4",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "powerpay-5c964",
+          "configurations": {
+            "android": "1:224888229405:android:964ba477f4e8fbf29bc0f4"
+          }
+        }
+      }
+    }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ]
+    }
+  ]
+}
