--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+4
+version: 1.0.0+5
 
 environment:
   sdk: ^3.7.0
@@ -52,6 +52,7 @@ dependencies:
   intl: ^0.19.0
   url_launcher: ^6.3.2
   webview_flutter: ^4.13.0
+  webview_flutter_android: ^4.10.5
 
 dev_dependencies:
   flutter_test:
