--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+5
+version: 1.0.0+11
 
 environment:
   sdk: ^3.7.0
-
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -53,6 +52,10 @@ dependencies:
   url_launcher: ^6.3.2
   webview_flutter: ^4.13.0
   webview_flutter_android: ^4.10.5
+  webview_flutter_wkwebview: ^3.23.2
+  uuid: ^4.5.2
+  cloud_functions: ^5.6.2
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
