--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+11
+version: 1.0.0+15
 
 environment:
   sdk: ^3.7.0
@@ -56,6 +56,7 @@ dependencies:
   uuid: ^4.5.2
   cloud_functions: ^5.6.2
   shared_preferences: ^2.5.3
+  android_intent_plus: ^6.0.0
 
 dev_dependencies:
   flutter_test:
